remove unnecessary word 'false'

--- a/React JS/04.Workshop - Components/client/index.html
+++ b/React JS/04.Workshop - Components/client/index.html
@@ -9,7 +9,7 @@
     <title>User List Demo</title>
   </head>
   <body>
-    <div id="root"></div>false
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
